--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="slate_950">#020617</color>
+    <color name="slate_900">#0F172A</color>
+    <color name="slate_800">#1E293B</color>
+    <color name="slate_700">#334155</color>
+    <color name="slate_500">#64748B</color>
+    <color name="slate_400">#94A3B8</color>
+    <color name="slate_300">#CBD5E1</color>
+    <color name="sky_700">#0369A1</color>
+    <color name="sky_600">#0284C7</color>
+    <color name="sky_500">#0EA5E9</color>
+    <color name="sky_400">#38BDF8</color>
+    <color name="indigo_700">#4338CA</color>
+    <color name="indigo_600">#4F46E5</color>
+    <color name="indigo_500">#6366F1</color>
+    <color name="green_700">#15803D</color>
+    <color name="green_600">#16A34A</color>
+    <color name="green_500">#22C55E</color>
+    <color name="rose_700">#BE123C</color>
+    <color name="rose_600">#E11D48</color>
+    <color name="yellow_500">#EAB308</color>
+    <color name="yellow_400">#FACC15</color>
 </resources>
